Fixed alignment in Dataset page

--- a/VisionaryVentures/wwwroot/css/site.css
+++ b/VisionaryVentures/wwwroot/css/site.css
@@ -246,9 +246,7 @@ body {
     inset-inline-start: 23vw;
     margin-top: 1%;
 }
-.my-1{
-    margin-left:2%;
-}
+
 #btn-card {
     margin-left: 22%;
     width: 74vw;
